Fix fork link and JS references

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
 <body>
 <div class="github-fork-ribbon-wrapper">
   <div class="github-fork-ribbon">
-    <a href="https://github.com/Automatic/tripviewer">Fork me on GitHub</a>
+    <a href="https://github.com/nateklaiber/automatic-tripviewer-rails">Fork me on GitHub</a>
   </div>
 </div>
 
@@ -42,16 +42,7 @@
   </div>
 </div>
 
-<script src="/bower_components/polyline/src/polyline.js"></script>
-<script src="/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="/bower_components/underscore/underscore-min.js"></script>
-<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/bower_components/moment/min/moment.min.js"></script>
-<script src="/bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.min.js"></script>
-<script src="/bower_components/d3/d3.min.js"></script>
-<script src="/javascripts/helper.js"></script>
-<script src="/javascripts/data.js"></script>
-<script src="/javascripts/main.js"></script>
+  <%= javascript_include_tag 'application' %>
 
 </body>
 </html>
