Fixing image reference in CSS

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -286,7 +286,7 @@ h2.pageTitle {
 .trip.tile .fuelCost::after {
   width: 21px;
   height: 28px;
-  background: url(/images/fuel.png) 0 3px no-repeat;
+  background: image-url('fuel.png') 0 3px no-repeat;
   content: ' ';
   display: inline-block;
 }
