--- a/app/views/layouts/_header_navigation.html.erb
+++ b/app/views/layouts/_header_navigation.html.erb
@@ -2,9 +2,10 @@
   <div class="navbar-header"><button type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
-      <li class="active"><%= link_to('Summary', root_path) %></li>
-      <li><%= link_to('Trips', trips_path) %></li>
-      <li><%= link_to('Vehicles', vehicles_path) %></li>
+      <li class="<%= active_nav(controllers: 'pages', actions: 'home') %>"><%= link_to('Summary', root_path) %></li>
+      <li class="<%= active_nav(controllers: 'trips', actions: 'index, show') %>"><%= link_to('Trips', trips_path, class: (if current_page?(trips_path) then 'active' else nil end)) %></li>
+      <li class="<%= active_nav(controllers: 'vehicles', actions: 'index, show') %>"><%= link_to('Vehicles', vehicles_path) %></li>
+
       <li class="dropdown">
       <a id="export" href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Export All</span> <b class="caret"></b></a>
       <ul role="menu" class="dropdown-menu">
