--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>TripViewer: View and Export your Automatic Trips</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <title>TripViewer: View and Export your Automatic Trips</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="View and Export your Automatic Trips">
+    <%= stylesheet_link_tag 'application', media: 'screen' %>
+    <%= csrf_meta_tag %>
+    <%= tag('meta', name: 'x-mapbox-token', content: ENV['MAPBOX_ACCESS_TOKEN']) %>
+  </head>
 
-<div id="wrapper">
-<header>
-  <h1>Automatic TripViewer</h1>
-  <p class="byline">View and Export your Automatic Trips</p>
-</header>
+  <body>
+   <%= render partial: 'layouts/fork' %>
 
-<section class="content">
-<%= yield %>
-</section>
+    <div class="mainHeader">
+      <div class="wrapper">
+        <a href="http://automatic.com" class="logo"></a>
+        <div class="titlebar">
+          <h1>TripViewer</h1>
+          <div class="tagline">View and Export your Automatic Trips</div>
+        </div>
 
-<footer>
-  <small>&copy; <%= Time.now.year %> <%= link_to('Automatic', 'https://automatic.com', rel: 'external') %></small>
-</footer>
-</div> <!-- /#wrapper -->
-</body>
+        <%= render partial: 'layouts/header_navigation' %>
+      </div>
+    </div>
+
+    <div class="wrapper content">
+      <%= yield %>
+    </div>
+
+    <%= javascript_include_tag 'application' %>
+  </body>
 </html>
