--- a/app/views/layouts/_header_navigation.html.erb
+++ b/app/views/layouts/_header_navigation.html.erb
@@ -15,8 +15,10 @@
       </li>
     </ul>
 
+    <% if !access_token? %>
     <ul class="nav navbar-nav navbar-right">
       <li><%= link_to('Log Out', logout_path, id: 'logout') %></li>
     </ul>
+    <% end %>
   </div>
 </nav>
