Utilize the `omniauth-automatic` gem, falling back to the ENV for development.

--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -29,7 +29,7 @@
         <p>TripViewer shows trips taken with <a href="http://automatic.com" rel="external">Automatic</a>. See summary stats, inspect individual trips and export trips as .csv.</p>
       </div>
       <div class="col-md-6">
-        <a href="<%= automatic_auth_path(:automatic) %>" class="center-block btn btn-primary btn-lg">
+        <a href="/auth/automatic" class="center-block btn btn-primary btn-lg">
           <span class="icon automatic-logo"></span>Sign in with Automatic</a>
       </div>
     </div>
