--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,6 @@
 /*
  *= require 'bootstrap/dist/css/bootstrap.min'
+ *= require 'fonts'
  *= require 'mapbox.js/mapbox'
  *= require 'style'
  *= require 'pagination'
