--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -8,7 +8,7 @@
   <div class="trip tile">
     <div class="times">
       <div class="endTime"><%= @trip.ended_at.to_s(:tile_time) %></div>
-      <div class="duration"><%= @trip.minutes_driven.round %> min</div>
+      <div class="duration"><%= @trip.minutes_duration.round %> min</div>
       <div class="startTime"><%= @trip.started_at.to_s(:tile_time) %></div>
       <div class="tripLine">
         <div></div>
