--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,9 @@
     </div>
 
     <div class="wrapper content">
-      <% if access_token? %>
+      <% if current_user? %>
       <div class="logout">
-        <p>Logged in as <%= automatic_user.username %> <%= link_to('Logout', logout_path, id: 'logout', method: :delete) %></p>
+        <p>Logged in as <%= current_user.username %> <%= link_to('Logout', logout_path, id: 'logout', method: :delete) %></p>
       </div>
     <% end %>
       <%= yield %>
