Fix marker popup content

--- a/app/assets/javascripts/trip_tiles.js.erb
+++ b/app/assets/javascripts/trip_tiles.js.erb
@@ -61,7 +61,7 @@ var drawMap = function(tripContainer, mapContainer) {
   // Start Marker
   L.marker(start, { title: 'Start Location' })
    .setIcon(aIcon)
-   .bindPopup(endPopupContent)
+   .bindPopup(startPopupContent)
    .addTo(map);
 
   // End Marker
