--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -2,7 +2,7 @@
   text-align: right;
 }
 body {
-  font-family: Avenir;
+  font-family: 'avenir next', avenir, helvetica, arial, sans-serif;
   background: #e1e1e1 image-url('climpek.png') 0 0;
 }
 .wrapper {
@@ -90,23 +90,84 @@ h2.pageTitle {
   font-size: 16px;
   line-height: 24px;
 }
-.sign-in {
-  margin-top: 30px;
-  clear: both;
-}
-.sign-in .btn {
+.signin-panel {
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
   display: block;
-  margin: 0 auto;
-  width: 250px;
-  margin-top: 60px;
+  margin: 70px auto 0;
+  max-width: 600px;
 }
-.sign-in .btn .automatic-logo {
-  height: 24px;
-  width: 24px;
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 5px;
-  background: image-url('automatic-logo.png') 0 0 no-repeat;
+.signin-panel .border-top {
+  border-top: 1px solid #ebeae6;
+  padding: 10px 20px;
+}
+.signin-panel .border-both {
+  border-bottom: 1px solid #ebeae6;
+  border-top: 1px solid #ebeae6;
+  padding: 10px 20px;
+}
+.signin-title {
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 32px;
+  margin-top: 10px;
+  text-align: center;
+}
+.signin-graphics {
+  height: 46px;
+  margin: 10px auto 30px;
+  position: relative;
+  width: 232px;
+}
+.signin-graphics .logo-badge-automatic {
+  background: image-url("logo_badge_automatic.png") 0 0 no-repeat;
+  height: 39px;
+  left: 0;
+  position: absolute;
+  top: 3px;
+  width: 36px;
+}
+.signin-graphics .icon-integrations-arrows {
+  background: image-url("icon_integrations_arrows.png") 0 0 no-repeat;
+  height: 46px;
+  left: 59px;
+  position: absolute;
+  top: 0;
+  width: 113px;
+}
+.signin-graphics .logo-badge-tripviewer {
+  font-size: 49px;
+  height: 39px;
+  left: 195px;
+  line-height: 49px;
+  margin: -5px 0 0 5px;
+  position: absolute;
+  top: 3px;
+  width: 39px;
+}
+.signin-instructions {
+  display: block;
+  font-size: 18px
+}
+.signin-text {
+  text-align: center;
+}
+.signin-btn {
+  background: image-url("auth_automatic-connect-28-sprite.svg") 0 0 no-repeat;
+  background-size: 205px 64px;
+  display: block;
+  height: 32px;
+  margin: 10px auto 0;
+  text-indent: -9999px;
+  width: 205px;
+}
+.signin-btn:hover,
+.signin-btn:active {
+  background-image: image-url("auth_automatic-connect-28-sprite.svg");
+  background-position: 0 -32px;
+}
+.signin-learnmore {
+  margin: 50px 0 10px;
+  text-align: center;
 }
 .display-type {
   margin-top: 20px;
@@ -602,6 +663,37 @@ text.key {
 #vehicles .vehicle .vehicleStats span.badge {
   float: right;
 }
+@media (min-width: 580px) {
+  .signin-body {
+    overflow: hidden;
+  }
+
+  .signin-instructions {
+    display: inline-block;
+  }
+
+  .signin-text {
+    line-height: 40px;
+  }
+
+  .signin-btn {
+    float: right;
+    margin-top: 4px;
+  }
+
+  .signin-panel {
+    margin-bottom: 100px;
+    margin-top: 100px;
+  }
+
+  .signin-panel .border-top {
+    padding: 10px 40px;
+  }
+
+  .signin-panel .border-both {
+    padding: 10px 40px;
+  }
+}
 @media (min--moz-device-pixel-ratio: 1.5),
 (-o-min-device-pixel-ratio: 3/2),
 (-webkit-min-device-pixel-ratio: 1.5),
@@ -615,9 +707,5 @@ text.key {
   .mainHeader .logo {
     background-image: image-url('automatic-logo-header@2x.png');
     background-size: 119px 33px;
-  }
-  .sign-in .btn .automatic-logo {
-    background-image: image-url('automatic-logo@2x.png');
-    background-size: 22px 24px;
   }
 }
