--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
   <head>
     <title>TripViewer: View and Export your Automatic Trips</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -8,6 +8,8 @@
     <%= stylesheet_link_tag 'application', media: 'screen' %>
     <%= csrf_meta_tag %>
     <%= tag('meta', name: 'x-mapbox-token', content: ENV['MAPBOX_ACCESS_TOKEN']) %>
+    <!-- Detect javascript -->
+    <script>document.documentElement.className = document.documentElement.className.replace("no-js","js");</script>
   </head>
 
   <body>
