Adding Vehicles and Vehicle-scoped trips
TODO:

* Extract some helper methods for retrieving vehicle
before filter
* Extract trip info to partials

--- a/app/views/vehicle/trips/index.html.erb
+++ b/app/views/vehicle/trips/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="pageTitle">Trips</h2>
+<h2 class="pageTitle">Trips taken in <%= vehicle.display_name %></h2>
 <div id="trips">
   <% if @trips.any? %>
     <% @trips.each do |trip| %>
