--- a/app/views/layouts/_header_navigation.html.erb
+++ b/app/views/layouts/_header_navigation.html.erb
@@ -1,3 +1,9 @@
 <nav id="topmenu" role="navigation" class="navbar navbar-default">
   <div class="navbar-header"><button type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
+  <div class="collapse navbar-collapse">
+    <ul class="nav navbar-nav">
+      <li class="<%= active_nav(controllers: 'trips', actions: 'index, show') %>"><%= link_to('Trips', trips_path) %></li>
+      <li class="<%= active_nav(controllers: 'vehicles', actions: 'index, show') %>"><%= link_to('Vehicles', vehicles_path) %></li>
+    </ul>
+  </div>
 </nav>
