--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -727,3 +727,22 @@ text.key {
 html.js form#trip-tag input[type="submit"] {
   display: none;
 }
+div.fuel-level {
+  clear: both;
+  padding: 4px 0;
+  display: inline-block;
+  background-color: #ddd;
+  width: 100%;
+  border-radius: 9px;
+
+  .progress-bar {
+    display: inline-block;
+    margin: 0 5px 0;
+    color: #08b1d5;
+    background-color: #08b1d5;
+    height: 18px;
+    border-radius: 7px;
+    color: #fff;
+    font-weight: bold;
+  }
+}
