--- a/app/views/vehicle/trips/index.html.erb
+++ b/app/views/vehicle/trips/index.html.erb
@@ -1,4 +1,11 @@
+<h2 class="pageTitle">Fuel Level</h2>
+
+<div class="fuel-level">
+  <div class="progress-bar" style="width: <%= vehicle.fuel_level_percent %>%"><%= "%.2f%" % [vehicle.fuel_level_percent] %></div>
+</div>
+
 <h2 class="pageTitle">Trips taken in <%= vehicle.display_name %></h2>
+
 <div id="trips">
   <% if @trips.any? %>
     <%= render(partial: 'trips/trip', collection: @trips.to_a, as: :trip) %>
